--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,10 @@ jobs:
         run: |
           pip install mkdocs-material
 
+      - name: Building MkDocs for GitHub Pages
+        run: |
+          mkdocs build
+          
       - name: Deploy MkDocs to GitHub Pages
         run: |
           mkdocs gh-deploy --remote-branch gh-pages --force
